--- a/store/blocks/desktop/components/home/header/main-mega-menu.jsonc
+++ b/store/blocks/desktop/components/home/header/main-mega-menu.jsonc
@@ -1,13 +1,18 @@
 {
-  "sticky-layout#4-desktop": {
+  "flex-layout.col#desktop": {
+    "children": [
+      "flex-layout.row#row_trigger-desktop",
+      "flex-layout.row#mega-menu"
+    ]
+  },
+    "sticky-layout#4-desktop": {
     "title": "container mega menu desktop",
     "children": ["flex-layout.row#row_trigger-desktop", "flex-layout.row#mega-menu"]
   },
   "flex-layout.row#row_trigger-desktop": {
     "title": "row mega menu",
     "children": [
-      "flex-layout.col#trigger-mega-menu"
-
+       "flex-layout.col#trigger-mega-menu"
     ]
   },
 
@@ -31,7 +36,8 @@
   "mega-menu-trigger-btn": {
     "title": "trigger mega menu desktop",
     "props": {
-      "Drawer": "drawer"
+      "Drawer": "drawer",
+      "blockClass": "mega-menu-trigger"
     }
   }
 }
