CSS styles are added to see the mega menu on desktop

--- a/store/blocks/desktop/components/home/header/main_header.jsonc
+++ b/store/blocks/desktop/components/home/header/main_header.jsonc
@@ -33,7 +33,7 @@
       "blockClass": "header-container-menu-desktop-section-one-left"
     },
     "children": [
-      "flex-layout.col#desktop", 
+     "flex-layout.col#meda-menu-desktop", 
       "flex-layout.col#logo-desktop", 
       "search-bar"]
   },
