--- a/store/blocks/desktop/components/home/header/main-mega-menu.jsonc
+++ b/store/blocks/desktop/components/home/header/main-mega-menu.jsonc
@@ -1,13 +1,9 @@
 {
-  "flex-layout.col#desktop": {
+  "flex-layout.col#meda-menu-desktop": {
     "children": [
       "flex-layout.row#row_trigger-desktop",
       "flex-layout.row#mega-menu"
     ]
-  },
-    "sticky-layout#4-desktop": {
-    "title": "container mega menu desktop",
-    "children": ["flex-layout.row#row_trigger-desktop", "flex-layout.row#mega-menu"]
   },
   "flex-layout.row#row_trigger-desktop": {
     "title": "row mega menu",
@@ -23,7 +19,8 @@
   "mega-menu#desktop": {
     "title": "components mega menu desktop",
     "props": {
-      "openOnly": "horizontal"
+      "openOnly": "horizontal",
+      "blockClass": "components-mega-menu"
     }
   },
   "flex-layout.col#trigger-mega-menu": {
