text for login and styles were added

--- a/store/blocks/desktop/components/home/header/main_header.jsonc
+++ b/store/blocks/desktop/components/home/header/main_header.jsonc
@@ -64,21 +64,21 @@
   //   }
   // },
 
-  "flex-layout.col#logo-desktop": {
-    "title": "container logo desktop",
-    "props": {
-      "verticalAlign": "middle"
-    },
-    "children": ["logo#desktop"]
-  },
-  "logo#desktop": {
-    "props": {
-      "title": "Logo",
-      "href": "/",
-      "url": "assets/img/icon_logo.svg",
-      "width": "32px"
-    }
-  },
+  // "flex-layout.col#logo-desktop": {
+  //   "title": "container logo desktop",
+  //   "props": {
+  //     "verticalAlign": "middle"
+  //   },
+  //   "children": ["logo#desktop"]
+  // },
+  // "logo#desktop": {
+  //   "props": {
+  //     "title": "Logo",
+  //     "href": "/",
+  //     "url": "assets/img/icon_logo.svg",
+  //     "width": "32px"
+  //   }
+  // },
   "search-bar": {
     "props": {
       "placeholder": "Search products....",
