product-highlight component is added, slider icons are changed, style is fixed to the mega menu, style is fixed to the summary images, minicart styles are fixed

--- a/store/blocks/global/components/shelf_products/main_shelf_products.jsonc
+++ b/store/blocks/global/components/shelf_products/main_shelf_products.jsonc
@@ -28,6 +28,7 @@
       // "product-quantity",
       "flex-layout.col#shelf-description",
       "flex-layout.col#shelf-price",
+      "vtex.product-highlights@2.x:product-highlights",
       "flex-layout.row#shelf-button"
     ],
     "props": {
