--- a/store/blocks/global/components/minicart/minicart.jsonc
+++ b/store/blocks/global/components/minicart/minicart.jsonc
@@ -10,8 +10,14 @@
       "flex-layout.row#logo",
       "flex-layout.row#minicart-header",
       "minicart-base-content"
+      // "product-quantity"
     ]
   },
+  // "product-quantity": {
+  //   "props": {
+  //     "warningQuantityThreshold": 9999999,
+  //     "showUnit": true
+  //   }},
   "flex-layout.row#logo": {
     "title": "container logo mini cart",
     "props": {
@@ -79,6 +85,21 @@
     },
     "blocks": ["product-list-content-mobile"]
   },
+  // "product-list-content-mobile": {
+  //   "title": "Product List Content Mobile",
+  //   "props": {
+  //     "blockClass": "minicart-product-list-content-mobile",
+  //     "children": "icon-delete#custom-delete-icon"
+  //   }
+  // },
+  // "icon-delete#custom-delete-icon": {
+  //   "title": "Custom Delete Icon",
+  //   "props": {
+  //     "size": 16,
+  //     "blockClass": "custom-delete-icon",
+  //     "id": "delete"
+  //   }
+  // },
   "minicart-summary": {
     "title": "Minicart Summary",
     "props": {
@@ -90,6 +111,7 @@
     "title": "Minicart Checkout Button",
     "props": {
       "finishShoppingButtonLink": "/checkout/#/orderform",
+       "customSummaryText": "Finalizar tu compra",
       "blockClass": "minicart-checkout-button"
     }
   },
