--- a/manifest.json
+++ b/manifest.json
@@ -53,7 +53,8 @@
     "vtex.product-list": "0.x",
     "vtex.checkout-summary": "0.x",
     "vtex.store-link": "0.x",
-    "vtex.product-highlights": "2.x"
+    "vtex.product-highlights": "2.x",
+    "vtex.disclosure-layout": "1.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x",
