feat(plp): implement product display, filtering, and sorting by category, subcategory, and brand

--- a/store/blocks/desktop/screen/footer.jsonc
+++ b/store/blocks/desktop/screen/footer.jsonc
@@ -1,6 +1,6 @@
 {
-  "footer-layout.desktop": {
-    "title": "desktop footer",
-    "children": ["flex-layout.row#footer-desktop"]
-  }
+  // "footer-layout.desktop": {
+  //   "title": "desktop footer",
+  //   "children": ["flex-layout.row#footer-desktop"]
+  // }
 }
